--- a/API/GanadoControlAPI/GanadoControlAPI.csproj
+++ b/API/GanadoControlAPI/GanadoControlAPI.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\Models\Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
