--- a/fronted_hackathon/hackathon_app/pubspec.yaml
+++ b/fronted_hackathon/hackathon_app/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   provider: ^6.0.5
+ 
+  image_picker_widget: ^2.4.1
+  intl: ^0.18.1
+  counter: ^0.2.2
 
 dev_dependencies:
   flutter_test:
