--- a/fronted_hackathon/hackathon_app/android/app/src/main/AndroidManifest.xml
+++ b/fronted_hackathon/hackathon_app/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.INTERNET" />  
     <application
+
         android:label="hackathon_app"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
@@ -31,5 +33,6 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        
     </application>
 </manifest>
