--- a/fronted_hackathon/hackathon_app/android/app/src/main/AndroidManifest.xml
+++ b/fronted_hackathon/hackathon_app/android/app/src/main/AndroidManifest.xml
@@ -2,9 +2,9 @@
     <uses-permission android:name="android.permission.INTERNET" />  
     <application
 
-        android:label="hackathon_app"
+        android:label="Ganado Control"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/launcher_icon">
         <activity
         
             android:name=".MainActivity"
