--- a/fronted_hackathon/hackathon_app/android/app/src/main/AndroidManifest.xml
+++ b/fronted_hackathon/hackathon_app/android/app/src/main/AndroidManifest.xml
@@ -4,9 +4,11 @@
 
         android:label="Ganado Control"
         android:name="${applicationName}"
-        android:icon="@mipmap/launcher_icon">
+        android:icon="@mipmap/ic_launcher">
         <activity
         
+            android:showWhenLocked="true"
+            android:turnScreenOn="true"
             android:name=".MainActivity"
             android:exported="true"
             android:launchMode="singleTop"
