--- a/fronted_hackathon/hackathon_app/pubspec.yaml
+++ b/fronted_hackathon/hackathon_app/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_local_notifications: 
   cached_network_image: ^3.3.0
   shared_preferences: ^2.2.2
+  sqflite: ^2.3.0
   
  
   
