--- a/API/GanadoControlAPI/GanadoControlAPI.csproj
+++ b/API/GanadoControlAPI/GanadoControlAPI.csproj
@@ -19,7 +19,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\" />
+    <Folder Include="wwwroot\FotosDeDocumentos\" />
+    <Folder Include="wwwroot\Documentos\" />
   </ItemGroup>
 
 </Project>
