--- a/fronted_hackathon/hackathon_app/pubspec.yaml
+++ b/fronted_hackathon/hackathon_app/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   share_plus: ^7.2.1
   qr_flutter: ^4.1.0
   qr_code_scanner: ^1.0.1
+  syncfusion_flutter_pdfviewer: ^23.1.41
   
  
   
