--- a/fronted_hackathon/hackathon_app/pubspec.yaml
+++ b/fronted_hackathon/hackathon_app/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   qr_flutter: ^4.1.0
   qr_code_scanner: ^1.0.1
   syncfusion_flutter_pdfviewer: ^23.1.41
+  syncfusion_flutter_charts: ^23.1.41
   
  
   
